--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,12 @@
 h1,h2,h3,h4,h5 {
     text-align: center;
 }
+
+.btn {
+    
+    min-width: 100px;
+
+    background-color: transparent;
+    border-radius: 10px;
+    padding: .5rem 1rem;
+}
