Add email validation and user creation.

--- a/src/components/Appointments/Appointments.css
+++ b/src/components/Appointments/Appointments.css
@@ -2,7 +2,10 @@
     margin: 0 .5rem;
     padding: 0 .5rem;
 
-    background-color: white;
+    background-color: var(--color-button);
+    color: white;
+
+    border-width: 1px;
     border-radius: 20px;
 }
 
